feat: add GPU options for launcher
- Add GPU preference setting (Auto/Integrated/Dedicated)
- Implement Linux GPU selection with DRI_PRIME and NVIDIA env vars
- Add GPU detection using Electron's app.getGPUInfo()
- Update settings UI with GPU preference dropdown
- Integrate GPU preference into game launch process

--- a/GUI/index.html
+++ b/GUI/index.html
@@ -325,6 +325,21 @@
                                             </button>
                                         </div>
                                     </div>
+
+                                    <div class="settings-option">
+                                        <div class="settings-input-group">
+                                            <label id="settings-input-label" class=""></label>
+                                            <select id="gpuPreferenceSelect" class="settings-input">
+                                                <option value="auto">Auto (Default)</option>
+                                                <option value="integrated">Integrated GPU</option>
+                                                <option value="dedicated">Dedicated GPU</option>
+                                            </select>
+                                            <p class="settings-hint">
+                                                <i class="fas fa-info-circle"></i>
+                                                Select your preferred GPU (Linux: affects DRI_PRIME)
+                                            </p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
