feat: auto-detect dedicated GPU on hybrid laptops (iGPU+dGPU)
added fallbacks to and option to use integrated GPU.

--- a/GUI/index.html
+++ b/GUI/index.html
@@ -340,6 +340,7 @@
                                             <i class="fas fa-info-circle"></i>
                                             Select your preferred GPU (Linux: affects DRI_PRIME)
                                         </p>
+                                        <div id="gpu-detection-info" class="gpu-detection-info"></div>
                                     </div>
                                 </div>
                             </div>
