--- a/GUI/index.html
+++ b/GUI/index.html
@@ -364,6 +364,7 @@
                                             <i class="fas fa-info-circle"></i>
                                             Select your preferred GPU (Linux: affects DRI_PRIME)
                                         </p>
+                                        <div id="gpu-detection-info" class="gpu-detection-info"></div>
                                     </div>
                                 </div>
 
