fix: JRE retry button

--- a/GUI/index.html
+++ b/GUI/index.html
@@ -619,9 +619,17 @@
                 <div id="progressErrorMessage" class="progress-error-message"></div>
                 <div class="progress-retry-section">
                     <span id="progressRetryInfo" class="progress-retry-info"></span>
-                    <button id="progressRetryBtn" class="progress-retry-btn" style="display: none;">
-                        🔄 Retry Download
-                    </button>
+                    <div class="progress-retry-buttons">
+                        <button id="progressJRRetryBtn" class="progress-retry-btn" style="display: none;">
+                            Retry Java Download
+                        </button>
+                        <button id="progressPWRRetryBtn" class="progress-retry-btn" style="display: none;">
+                            Retry Game Download
+                        </button>
+                        <button id="progressRetryBtn" class="progress-retry-btn" style="display: none;">
+                            Retry Download
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
