fix: GPU preference hint to Laptop-only

--- a/GUI/index.html
+++ b/GUI/index.html
@@ -400,8 +400,7 @@
                                         </div>
                                         <p class="settings-hint">
                                             <i class="fas fa-info-circle"></i>
-                                            <span data-i18n="settings.gpuHint">Select your preferred GPU (Linux:
-                                                affects DRI_PRIME)</span>
+                                            <span data-i18n="settings.gpuHint">Laptop-only feature; set to Integrated if on PC</span>
                                         </p>
                                         <div id="gpu-detection-info" class="gpu-detection-info"></div>
                                     </div>
