fix: missing version text on launcher

--- a/GUI/index.html
+++ b/GUI/index.html
@@ -746,6 +746,7 @@
 
     <div class="version-display-bottom">
         <i class="fas fa-code-branch"></i>
+        <span id="launcherVersion"></span>
     </div>
 
     <footer class="fixed bottom-0 left-0 right-0 z-50 bg-black/80 backdrop-blur-sm px-4 py-2">
