Improve featured servers layout with Discord integration
- Add Discord button to server cards when discord link is present in API data
- Remove HF2P Servers section to use full width for featured servers
- Increase server card size (300x180px banner, larger fonts and spacing)
- Simplify layout from 2-column grid to single full-width container
- Discord button opens external browser with server invite link

--- a/GUI/index.html
+++ b/GUI/index.html
@@ -217,32 +217,16 @@
                     </div>
 
                     <div id="featured-page" class="page">
-                        <div class="featured-layout">
-                            <div class="featured-left">
-                                <div class="featured-header">
-                                    <h2 class="featured-title">
-                                        <i class="fas fa-star mr-2"></i>
-                                        <span>FEATURED SERVERS</span>
-                                    </h2>
-                                </div>
-                                <div id="featuredServersList" class="featured-list">
-                                    <div class="loading-spinner">
-                                        <i class="fas fa-spinner fa-spin fa-2x"></i>
-                                    </div>
-                                </div>
+                        <div class="featured-container">
+                            <div class="featured-header">
+                                <h2 class="featured-title">
+                                    <i class="fas fa-star mr-2"></i>
+                                    <span>FEATURED SERVERS</span>
+                                </h2>
                             </div>
-                            
-                            <div class="featured-right">
-                                <div class="featured-header">
-                                    <h2 class="featured-title">
-                                        <i class="fas fa-server mr-2"></i>
-                                        <span>HF2P SERVERS</span>
-                                    </h2>
-                                </div>
-                                <div id="myServersList" class="featured-list">
-                                    <div class="loading-spinner">
-                                        <i class="fas fa-spinner fa-spin fa-2x"></i>
-                                    </div>
+                            <div id="featuredServersList" class="featured-list">
+                                <div class="loading-spinner">
+                                    <i class="fas fa-spinner fa-spin fa-2x"></i>
                                 </div>
                             </div>
                         </div>
